// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hovercard /> with additional className matches its snapshot 1`] = `
<span
  className="y-hovercard TEST_CLASSNAME"
>
  <span
    className="y-hovercard--trigger"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Trigger
    </span>
  </span>
</span>
`;

exports[`<Hovercard /> with default options matches its snapshot 1`] = `
<span
  className="y-hovercard"
>
  <span
    className="y-hovercard--trigger"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Trigger
    </span>
  </span>
</span>
`;

exports[`<Hovercard /> with screenreaderTitle matches its snapshot 1`] = `
<span
  className="y-hovercard"
>
  <span
    className="y-hovercard--trigger"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Trigger
    </span>
  </span>
  <Callout
    directionalHint={5}
    isBeakVisible={true}
    onDismiss={[Function]}
    preventDismissOnScroll={false}
  >
    <div
      className="y-hovercard--modal-container"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ScreenreaderText>
        <h1>
          HIDDEN TITLE
        </h1>
      </ScreenreaderText>
      <div>
        Hovercard content
      </div>
    </div>
  </Callout>
</span>
`;
